--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -84,7 +84,7 @@
 
     <!-- COLLECTION -->
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/editText_collection"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -110,11 +110,13 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="14dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText7" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_collection"
+        android:prompt="@string/color_prompt"
+        android:spinnerMode="dialog"/>
 
 
     <!-- FINISH -->
@@ -126,11 +128,13 @@
         android:layout_marginLeft="10dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"
         app:layout_constraintTop_toBottomOf="@+id/spinner_color"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:prompt="@string/finish_prompt"
+        android:spinnerMode="dialog"/>
 
 
     <!-- BUTTON AD NAILPOLISH 2 DB -->
