Add hint on AddNew Activity

--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -36,8 +36,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:ems="10"
+        android:hint="@string/text_Name"
         android:inputType="textPersonName"
-        android:text="@string/text_Name"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -55,8 +55,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="11dp"
         android:ems="10"
+        android:hint="@string/text_ID"
         android:inputType="textPersonName"
-        android:text="@string/text_ID"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -74,8 +74,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="12dp"
         android:ems="10"
+        android:hint="@string/text_Brand"
         android:inputType="textPersonName"
-        android:text="@string/text_Brand"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -91,11 +91,11 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="11dp"
         android:ems="10"
+        android:hint="@string/text_collection"
         android:inputType="textPersonName"
-        android:text="@string/text_collection"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_brand" />
