Add Search Icon to Toolbar

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,8 +5,21 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/search"
+        android:actionViewClass="android.widget.SearchView"
+        android:checkable="true"
+        android:enabled="true"
+        android:icon="@android:drawable/ic_menu_search"
         android:orderInCategory="100"
+        android:showAsAction="collapseActionView|ifRoom"
+        android:title="@string/toolbar_search"
+        android:visible="true"
+        app:showAsAction="always" />
+    
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="101"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
 </menu>
