Change Preferences Activity
Add simple Text

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"><![CDATA[
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListPreference
-        android:title="@string/heading_dbdetails">
+    ]]>
 
-    </ListPreference>
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="switch_preference_1"
+        android:title="@string/switch_designcolor" />
+
+    <Preference
+        android:summary=""
+        android:title="@string/settings_npcount" />
 
 </PreferenceScreen>
