--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -140,14 +140,14 @@
     <Button
         android:id="@+id/button_addnp"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
-        android:text="@string/button_addpolish2db"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="297dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        android:text="@string/button_addpolish2db"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
