--- a/app/src/main/res/layout/activity_view_database.xml
+++ b/app/src/main/res/layout/activity_view_database.xml
@@ -21,4 +21,17 @@
         app:titleTextColor="@android:color/background_light"
         app:theme="@style/ToolbarColoredBackArrow" />
 
+    <ListView
+        android:id="@+id/listview1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
+
 </android.support.constraint.ConstraintLayout>
