Change InputType to "Number"

--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -55,7 +55,7 @@
         android:layout_marginTop="11dp"
         android:ems="10"
         android:hint="@string/text_ID"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
