--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -21,7 +21,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="Name"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/textView2"
@@ -31,7 +32,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView1"
         android:text="ID"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/textView3"
@@ -40,7 +42,8 @@
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
         android:text="Brand"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/textView4"
@@ -50,17 +53,19 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView7"
         android:text="Finish"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
         android:text="Color"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/textView5"
@@ -69,67 +74,74 @@
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:text="Collection"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/brand_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
-        android:layout_alignLeft="@+id/id_tv"
-        android:layout_alignStart="@+id/id_tv" />
+        android:layout_alignLeft="@+id/collection_tv"
+        android:layout_alignStart="@+id/collection_tv"
+        android:text="TextView"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/collection_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_alignBaseline="@+id/textView"
         android:layout_alignBottom="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
+        android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp"
         android:layout_toEndOf="@+id/textView"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp" />
+        android:layout_toRightOf="@+id/textView"
+        android:text="TextView"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/finish_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_alignBaseline="@+id/textView4"
         android:layout_alignBottom="@+id/textView4"
         android:layout_alignLeft="@+id/color_tv"
-        android:layout_alignStart="@+id/color_tv" />
+        android:layout_alignStart="@+id/color_tv"
+        android:text="TextView"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/color_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_above="@+id/textView4"
         android:layout_alignLeft="@+id/brand_tv"
-        android:layout_alignStart="@+id/brand_tv" />
+        android:layout_alignStart="@+id/brand_tv"
+        android:text="TextView"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/id_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_toRightOf="@+id/textView1"
-        android:layout_toEndOf="@+id/textView1" />
+        android:layout_alignLeft="@+id/brand_tv"
+        android:layout_alignStart="@+id/brand_tv"
+        android:text="TextView"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
-        android:layout_toRightOf="@+id/textView1"
-        android:layout_toEndOf="@+id/textView1" />
+        android:layout_alignLeft="@+id/id_tv"
+        android:layout_alignStart="@+id/id_tv"
+        android:text="TextView"
+        android:textSize="18sp" />
 
 </RelativeLayout>
