--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -166,8 +166,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/textView_collection"
         android:layout_marginRight="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_collection"
-        app:layout_constraintHorizontal_bias="0.47" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView_collection" />
 
     <TextView
         android:id="@+id/textView13"
@@ -176,12 +175,12 @@
         android:text="@string/Color"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/textView_color"
-        android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_color"
-        app:layout_constraintHorizontal_bias="0.148" />
+        app:layout_constraintRight_toLeftOf="@+id/textView_color"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.148"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView_color" />
 
     <TextView
         android:id="@+id/textView14"
@@ -196,5 +195,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView_finish"
         app:layout_constraintHorizontal_bias="0.16" />
+
+    <Button
+        android:id="@+id/button_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Button_Delete"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.028"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button_edit" />
+
+    <Button
+        android:id="@+id/button_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Button_Edit"
+        app:layout_constraintLeft_toRightOf="@+id/button_delete"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.028"
+        android:layout_marginTop="71dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
 </android.support.constraint.ConstraintLayout>
