Remove unused Strings / Adjust String names

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -19,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Edit Nail Polish"
+        app:title="@string/toolbar_title_edit"
         app:titleTextColor="@android:color/background_light"
         app:theme="@style/ToolbarColoredBackArrow" />
 
@@ -35,7 +35,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:ems="10"
-        android:hint="@string/text_Name"
+        android:hint="@string/edittext_hint_name"
         android:inputType="textPersonName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="11dp"
         android:ems="10"
-        android:hint="@string/text_ID"
+        android:hint="@string/edittext_hint_id"
         android:inputType="number"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -73,7 +73,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="@string/text_Brand"
+        android:hint="@string/edittext_hint_brand"
         android:inputType="textPersonName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -92,7 +92,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="11dp"
         android:ems="10"
-        android:hint="@string/text_collection"
+        android:hint="@string/edittext_hint_collection"
         android:inputType="textPersonName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -145,7 +145,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="Save"
+        android:text="@string/button_save_edits"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
