--- a/app/src/main/res/layout/setting_toolbar.xml
+++ b/app/src/main/res/layout/setting_toolbar.xml
@@ -16,6 +16,7 @@
             android:minHeight="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:titleTextColor="@android:color/background_light"
+            app:title="@string/toolbar_title_settings"
             app:theme="@style/ToolbarColoredBackArrow"/>
         <ListView
             android:id="@android:id/list"
