--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -23,103 +23,103 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:theme="@style/ToolbarColoredBackArrow"
-        app:title="Nail Polish Details"
+        app:title="@string/toolbar_title_details"
         app:titleTextColor="@android:color/background_light" />
 
     <TextView
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="17dp"
+        android:text="@string/edittext_hint_name"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        tools:ignore="MissingConstraints"
-        android:layout_marginTop="17dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintLeft_toRightOf="@+id/textView10"
         android:layout_marginLeft="81dp"
         android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_name" />
+        android:text="@string/edittext_hint_id"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toRightOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/textView_name"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView_brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="11dp"
+        android:text="@string/edittext_hint_brand"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        tools:ignore="MissingConstraints"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_id"
         app:layout_constraintLeft_toRightOf="@+id/textView11"
-        android:layout_marginLeft="50dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_id"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView_collection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/edittext_hint_collection"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        tools:ignore="MissingConstraints"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_brand"
         app:layout_constraintLeft_toRightOf="@+id/textView12"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_brand"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginLeft="54dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/edittext_hint_color"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        tools:ignore="MissingConstraints"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_collection"
         app:layout_constraintLeft_toRightOf="@+id/textView13"
-        android:layout_marginLeft="54dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_collection"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="9dp"
+        android:text="@string/edittext_hint_finish"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_color"
         app:layout_constraintLeft_toRightOf="@+id/textView14"
-        android:layout_marginLeft="50dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_color" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_ID"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/textview_id"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_name"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_name" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_Brand"
+        android:text="@string/textview_brand"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
@@ -131,55 +131,55 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_collection"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="11dp"
+        android:text="@string/textview_collection"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Color"
+        android:layout_marginLeft="16dp"
+        android:text="@string/textview_color"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView_color"
-        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Text_Finish"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="9dp"
+        android:text="@string/textview_finish"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <Button
         android:id="@+id/button_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Button_Delete"
-        android:layout_marginTop="71dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="71dp"
+        android:text="@string/button_delete_nailpolish"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <Button
         android:id="@+id/button_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Button_Edit"
-        app:layout_constraintLeft_toRightOf="@+id/button_delete"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="72dp"
+        android:text="@string/button_edit_nailpolish"
+        app:layout_constraintLeft_toRightOf="@+id/button_delete"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
 </android.support.constraint.ConstraintLayout>
