--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@android:color/background_light"
+        app:title="@string/toolbar_title_main"
         app:theme="@style/ToolbarColoredBackArrow" />
 
     <ImageView
@@ -35,10 +36,10 @@
         app:srcCompat="@drawable/nailpolish"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintHorizontal_bias="0.514" />
+        app:layout_constraintHorizontal_bias="0.514"
+        tools:ignore="ContentDescription" />
 
     <Button
-        android:id="@+id/button_viewdatabase"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="297dp"
         android:layout_height="64dp"
