--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,6 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/search"
         android:actionViewClass="android.widget.SearchView"
         android:checkable="true"
         android:enabled="true"
@@ -19,7 +18,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="101"
-        android:title="@string/action_settings"
+        android:title="@string/menu_item_settings"
         app:showAsAction="never" />
 
 </menu>
