--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -30,92 +30,108 @@
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="17dp"
         android:text="@string/edittext_hint_name"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.026" />
 
     <TextView
         android:id="@+id/textView_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="81dp"
-        android:layout_marginTop="18dp"
-        android:text="@string/edittext_hint_id"
+        android:text="@string/edittext_hint_quantity"
         android:textAllCaps="false"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
+        tools:ignore="MissingConstraints"
         app:layout_constraintLeft_toRightOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView_name"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.106"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView_brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="11dp"
         android:text="@string/edittext_hint_brand"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
+        tools:ignore="MissingConstraints"
         app:layout_constraintLeft_toRightOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView_id"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView_collection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
         android:text="@string/edittext_hint_collection"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
+        tools:ignore="MissingConstraints"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView_brand"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.047"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView12" />
 
     <TextView
         android:id="@+id/textView_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="54dp"
-        android:layout_marginTop="12dp"
         android:text="@string/edittext_hint_color"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
+        tools:ignore="MissingConstraints"
         app:layout_constraintLeft_toRightOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/textView_collection"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView13" />
 
     <TextView
         android:id="@+id/textView_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="9dp"
         android:text="@string/edittext_hint_finish"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView_color" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView14" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="18dp"
-        android:text="@string/textview_id"
+        android:text="@string/textview_quantity"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_name" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.026" />
 
     <TextView
         android:id="@+id/textView11"
@@ -124,45 +140,58 @@
         android:text="@string/textview_brand"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView_name"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.025" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="11dp"
         android:text="@string/textview_collection"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.028" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:text="@string/textview_color"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_color"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.024" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="9dp"
         android:text="@string/textview_finish"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.025" />
 
     <Button
         android:id="@+id/button_delete"
@@ -170,12 +199,13 @@
         android:layout_width="297dp"
         android:layout_height="64dp"
         android:text="@string/button_delete_nailpolish"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="7dp"
         app:layout_constraintTop_toBottomOf="@+id/button_edit"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintHorizontal_bias="0.507" />
 
     <Button
         android:id="@+id/button_edit"
@@ -183,25 +213,25 @@
         android:layout_width="297dp"
         android:layout_height="64dp"
         android:text="@string/button_edit_nailpolish"
-        android:layout_marginTop="146dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_details"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.507" />
 
     <ImageView
         android:id="@+id/imageView_details"
         android:layout_width="129dp"
         android:layout_height="114dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
         app:srcCompat="@drawable/nailpolish"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.033" />
+        app:layout_constraintHorizontal_bias="0.853" />
 
 </android.support.constraint.ConstraintLayout>
