--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -45,7 +45,7 @@
 
     <!-- ID -->
     <EditText
-        android:id="@+id/editText_id"
+        android:id="@+id/editText_quantity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -54,7 +54,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="11dp"
         android:ems="10"
-        android:hint="@string/edittext_hint_id"
+        android:hint="@string/edittext_hint_quantity"
         android:inputType="number"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -78,7 +78,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_id" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_quantity" />
 
 
     <!-- COLLECTION -->
